e2e/main/objects/RawPerformanceRun__c/RawPerformanceRun__c.object-meta.xml
<CustomObject>
    <description>Stores raw async primitive performance probe timing rows for e2e experiments.</description>
    <label>Raw Performance Run</label>
    <nameField>
        <displayFormat>RawPerf-{00000000}</displayFormat>
        <label>Raw Performance Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Raw Performance Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>