e2e/main/objects/RawPerformanceRun__c/fields/DurationMs__c.field-meta.xml
<CustomField>
    <fullName>DurationMs__c</fullName>
    <label>Duration Ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>