e2e/main/objects/RawPerformanceRun__c/fields/FinishedAtMs__c.field-meta.xml
<CustomField>
    <fullName>FinishedAtMs__c</fullName>
    <label>Finished At Ms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>