e2e/main/objects/RawPerformanceRun__c/fields/ItemIndex__c.field-meta.xml
<CustomField>
    <fullName>ItemIndex__c</fullName>
    <label>Item Index</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>