e2e/main/objects/RawPerformanceRun__c/fields/RequestedAt__c.field-meta.xml
<CustomField>
    <fullName>RequestedAt__c</fullName>
    <label>Requested At</label>
    <type>DateTime</type>
</CustomField>