e2e/main/objects/RawPerformanceRun__c/fields/RequestedAtMs__c.field-meta.xml
<CustomField>
    <fullName>RequestedAtMs__c</fullName>
    <label>Requested At Ms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>