e2e/main/objects/RawPerformanceRun__c/fields/RunKey__c.field-meta.xml
<CustomField>
    <fullName>RunKey__c</fullName>
    <label>Run Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>