e2e/main/objects/RawPerformanceRun__c/fields/StartDelayMs__c.field-meta.xml
<CustomField>
    <fullName>StartDelayMs__c</fullName>
    <label>Start Delay Ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>