e2e/main/objects/RawPerformanceRun__c/fields/StartedAtMs__c.field-meta.xml
<CustomField>
    <fullName>StartedAtMs__c</fullName>
    <label>Started At Ms</label>
    <length>20</length>
    <type>Text</type>
</CustomField>