e2e/main/objects/RawPerformanceRun__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>