e2e/main/objects/RawPerformanceRun__c/fields/Variant__c.field-meta.xml
<CustomField>
    <fullName>Variant__c</fullName>
    <label>Variant</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>